language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_constant_usage_local_constant.snap
---
source: language-server/src/tests/action.rs
expression: "pub const wibble = \"Hello, world!\"\npub const wobble = wibble"
---
----- BEFORE ACTION
pub const wibble = "Hello, world!"
pub const wobble = wibble
                   ↑     


----- AFTER ACTION
pub const wibble = "Hello, world!"
pub const wobble = "Hello, world!"
