language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_constant_usage_local_size.snap
---
source: language-server/src/tests/action.rs
expression: "pub const wibble = 100\n\npub fn main(x) {\n  case x {\n    <<2:size(wibble)>> -> todo\n    _ -> todo\n  }\n}"
---
----- BEFORE ACTION
pub const wibble = 100

pub fn main(x) {
  case x {
    <<2:size(wibble)>> -> todo
             ↑                
    _ -> todo
  }
}


----- AFTER ACTION
pub const wibble = 100

pub fn main(x) {
  case x {
    <<2:size(100)>> -> todo
    _ -> todo
  }
}
