language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_variable_from_definition.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport gleam/io\n\npub fn main() {\n  let message = \"Hello!\"\n  io.println(message)\n}\n"
---
----- BEFORE ACTION

import gleam/io

pub fn main() {
  let message = "Hello!"
      ↑                 
  io.println(message)
}


----- AFTER ACTION

import gleam/io

pub fn main() {
  io.println("Hello!")
}
