language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_variable_in_case_scope.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport gleam/io\n\npub fn main(x) {\n  case x {\n    True -> {\n      let message = \"Hello!\"\n      io.println(message)\n    }\n    False -> Nil\n  }\n}\n"
---
----- BEFORE ACTION

import gleam/io

pub fn main(x) {
  case x {
    True -> {
      let message = "Hello!"
          ↑                 
      io.println(message)
    }
    False -> Nil
  }
}


----- AFTER ACTION

import gleam/io

pub fn main(x) {
  case x {
    True -> {
      io.println("Hello!")
    }
    False -> Nil
  }
}
