language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_variable_label_shorthand.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Example {\n  Example(sum: Int, nil: Nil)\n}\n\npub fn main() {\n  let sum = 1 + 1\n\n  Example(Nil, sum:)\n}\n"
---
----- BEFORE ACTION

pub type Example {
  Example(sum: Int, nil: Nil)
}

pub fn main() {
  let sum = 1 + 1
      ↑          

  Example(Nil, sum:)
}


----- AFTER ACTION

pub type Example {
  Example(sum: Int, nil: Nil)
}

pub fn main() {
  Example(Nil, sum: 1 + 1)
}
