language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_variable_when_over_let_keyword.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let x = 123\n  x + 1\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let x = 123
  ↑          
  x + 1
}


----- AFTER ACTION

pub fn main() {
  123 + 1
}
