language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_variable_with_record_field.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Couple {\n  Couple(l: Int, r: Int)\n}\n\npub fn main() {\n  let c1 = Couple(l: 1, r: 1)\n  let c2 = c1.l\n  echo c2\n}\n"
---
----- BEFORE ACTION

type Couple {
  Couple(l: Int, r: Int)
}

pub fn main() {
  let c1 = Couple(l: 1, r: 1)
  let c2 = c1.l
  echo c2
       ↑ 
}


----- AFTER ACTION

type Couple {
  Couple(l: Int, r: Int)
}

pub fn main() {
  let c1 = Couple(l: 1, r: 1)
  echo c1.l
}
